# learning-opengl

./: .gitignore  CMakeLists.txt  README.md  make.sh  run.sh
shader/glsl/: out2frag.frag  out2frag.vert  reverse.vert  rightShift.vert  texture.frag  texture1.frag  texture2.frag  texture3.frag  vertexPerColor.vert  zbuffer.frag
shader/include/: shader.h
source/include/: Input.h  buffer.h  camera.h
source/src/: Input.cpp  buffer.cpp
test/: windows.cpp
test/Coordinate/: Zbuffer.cpp  coordinate.cpp
test/GLSL/: out2frag.cpp  reverse.cpp  rightShift.cpp  vertexPerColor.cpp
test/Texture/: texture.cpp  texture1.cpp
test/Transform/: Transform.cpp
test/Triangle/: Triangle.cpp  Triangle1.cpp  Triangle2.cpp  Triangle3.cpp
test/camera/: camera1.cpp  camera2.cpp  camera3.cpp
